<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.baked.inscriptainventory.Activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_tab"
        android:orderInCategory="100"
        android:title="@string/add_tab"
        app:showAsAction="never"
        android:onClick="addTab"
        />
    <item
        android:id="@+id/delete_tab"
        android:orderInCategory="100"
        android:title="@string/remove_tab"
        app:showAsAction="never"
        android:onClick="deleteTab"
        />
    <item
        android:id="@+id/paste_item"
        android:orderInCategory="100"
        android:title="@string/paste_item"
        app:showAsAction="never"
        android:onClick="pasteItem"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"
        android:onClick="settingsClicked"
        />
    <item
        android:id="@+id/close_app"
        android:orderInCategory="100"
        android:title="@string/exit_to_restart"
        app:showAsAction="never"
        android:onClick="closeApp"
        />
</menu>
