<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ItemActionActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rv_border"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/nameAndNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inventoryItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inventoryItemNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/item_image"
            android:padding="5dp"
            app:layout_constraintDimensionRatio="1:1" />
    </LinearLayout>

    <TextView
        android:id="@+id/numLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/number_to_order"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/numberToRequestTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <EditText
        android:id="@+id/numberToRequestTxt"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hash_symbol"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numLabel" />

    <TextView
        android:id="@+id/commentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/additional_comment_optional"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberToRequestTxt" />

    <EditText
        android:id="@+id/additionalCommentTxt"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/comment"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="20"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentLabel" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@color/colorPrimary"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/send_request"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalCommentTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>