<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingsActivity">

    <LinearLayout
        android:id="@+id/ipLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rv_border"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/ipEditTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ip_address_lbl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ip_address_edittext"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ip_address"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ipButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/ip_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="12sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite" />
            <Button
                android:id="@+id/ip_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:textSize="12sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/portLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rv_border"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipLayout" >

        <LinearLayout
            android:id="@+id/portEditTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/portLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/port_address_lbl"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/port_num_edittext"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/port"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/portButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/port_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="12sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite" />
            <Button
                android:id="@+id/port_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:textSize="12sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>