<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ItemActionActivity">

    <TextView
        android:id="@+id/inventoryItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textViewContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/inventoryItemName">

        <TextView
            android:id="@+id/minStockLevelNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"/>

        <TextView
            android:id="@+id/numInInventory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/numberToSubmitTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContainer"
        app:layout_constraintDimensionRatio="1:1" />

    <EditText
        android:id="@+id/numberToSubmitTxt"
        android:cursorVisible="false"
        android:importantForAutofill="no"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_1"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberToSubmitTxt">


        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/remove_from_inventory"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/add_to_inventory"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>