<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.EditItemActivity"
    android:id="@+id/content" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/blank"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/strip_tube_1"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/strip_tube_4"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/strip_tube_6"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/tubes_w_caps"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/cell_tube"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/rotary_growth_vial"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radio7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@drawable/bottle"
                android:gravity="center" />
        </LinearLayout>
    </RadioGroup>

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/item_name2"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/partNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/partNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/part_number"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/partNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:gravity="start"
                android:hint="@string/part_number2"
                android:inputType="textVisiblePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partNumberTxt"
                tools:ignore="TextFields" />
        </LinearLayout>
        <ImageView
            android:id="@+id/commentsImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/comments"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partNumberLayout"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/minStockLevelET"
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:gravity="center"
                android:textSize="20sp"
                android:hint="@string/_0"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:text="@string/minimum_stock_level" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/numInStockET"
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:gravity="center"
                android:textSize="20sp"
                android:hint="@string/_0"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:text="@string/number_in_stock" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinnerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSelectionLayout" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginEnd="10dp"/>
        <Spinner
            android:id="@+id/sheetSelectSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/editButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_edit"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>